# StrikeEagle

./: .gitignore  README.md  debug_connection.py  demo.py  diagnose.py  diagnose_policy.py  pyproject.toml  test_env_offline.py  train.py
docs/: architecture.md  environment.md  missiles_and_aircraft.md  netcode_patches.md  training_guide.md
refs/dogfight-sandbox-hg2/: 0-install-requirements.bat  README.md  config.json  documentation_carrier_rl_landing.md  documentation_network.md
refs/dogfight-sandbox-hg2/Agent/: dogfight_client.py  requirements.txt
refs/dogfight-sandbox-hg2/network_client_example/: client_sample.py  dogfight_client.py  socket_lib.py
refs/dogfight-sandbox-hg2/source/: HUD.py  Machines.py  Missions.py  Physics.py  WaterReflection.py  aircraft_f16.py  carrier_deck_data.py  debug_rendering_2.py  main.py  master.py  missile_S400.py  missile_aim_sl.py  network_server.py  planet_render.py  socket_lib.py  states.py  vr_tools.py
refs/dogfight-sandbox-hg2/source/scripts/: aircraft_carrier_deck_parameters.json  aircraft_ia_inputs_mapping.json  aircraft_user_inputs_mapping.json  devices_config.json  export_carrier_deck_parameters.py  missile_launcher_user_inputs_mapping.json  network_mission_config.json  new_devices_config.json
src/: dogfight_client.py  missile_evasion_env.py  net_utils.py  socket_lib.py  wrappers.py
