[project]
name = "strikeeagle"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gymnasium",
    "numpy",
    "rich>=14.3.3",
    "stable-baselines3",
    "tensorboard",
    "torch",
    "tqdm>=4.66.5",
]

[project.scripts]
train = "train:main"
demo = "demo:main"
diagnose = "diagnose:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "train.py", "demo.py", "diagnose.py"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
